# family_app

./: .gitignore  CLAUDE.md  README.md  dev.sh
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/src/: config.py  main.py
backend/src/identity/api/: router.py  schemas.py
backend/src/identity/application/: command_handlers.py  commands.py  dto.py
backend/src/identity/domain/: events.py  family.py  invite_link.py  member.py  repository.py
backend/src/identity/infrastructure/: jwt_service.py  pin_hasher.py  sqlite_family_repo.py
backend/src/meal_call/api/: router.py  schemas.py
backend/src/meal_call/application/: command_handlers.py  commands.py  dto.py
backend/src/meal_call/domain/: events.py  meal_call.py  meal_response.py  menu_item.py  repository.py
backend/src/meal_call/infrastructure/: sqlite_meal_call_repo.py
backend/src/notification/api/: router.py  schemas.py
backend/src/notification/application/: commands.py  event_handlers.py
backend/src/notification/domain/: device_registration.py  notification_service.py  repository.py
backend/src/notification/infrastructure/: expo_push_service.py  sqlite_device_repo.py
backend/src/shared/api/: dependencies.py  error_handlers.py
backend/src/shared/domain/: aggregate_root.py  domain_event.py  value_object.py
backend/src/shared/infrastructure/: database.py  event_bus.py
backend/tests/: conftest.py
backend/tests/identity/: test_identity_api.py
backend/tests/meal_call/: test_meal_call_api.py
mobile/: app.json  (+5 more)
(+45 files in other folders)
