[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "family-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "pyjwt[crypto]>=2.10.0",
    "bcrypt>=4.2.0",
    "httpx>=0.27.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.19",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
